--- a/SLAM/Localization/定位前言.md
+++ b/SLAM/Localization/定位前言.md
@@ -8,7 +8,7 @@
 
 ## 回环检测、全局定位：
 
-![Localization-2](.\pic\Localization-2.jpg)
+![Localization-2](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/Localization-2.jpg)
 
 ### 有初始相对位姿
 
