--- a/建图-定位和障碍物检测的研究分析.md
+++ b/建图-定位和障碍物检测的研究分析.md
@@ -16,7 +16,7 @@
 
 如果说是侧重于建图，那么目的就是为了建好一个地图，其中考虑鲁棒性、效率等。其建图整体流程如下图：
 
-![picture-2](.\pic\picture-2.png)
+![picture-2](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-2.png)
 
 示例论文：其关键词是**里程计和建图**（里程计中涵盖定位功能，是为了拼接地图）
 
@@ -28,7 +28,7 @@ FAST-LIO: A Fast, Robust LiDAR-inertial **Odometry** Package by Tightly-Coupled 
 
 那么建图整体流程中是这么体现的：
 
-![picture-3](.\pic\picture-3.png)
+![picture-3](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-3.png)
 
 ### 侧重于定位
 
@@ -54,7 +54,7 @@ A Hierarchical Dual Model of Environment and Place-Specific Utility for Visual *
 
 基于侧重于建图的SLAM，有建图流程图如下：
 
-![picture-4](.\pic\picture-4.jpg)
+![picture-4](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-4.jpg)
 
 ### 前端里程计实现
 
@@ -62,11 +62,11 @@ A Hierarchical Dual Model of Environment and Place-Specific Utility for Visual *
 
 ##### ICP（迭代最近邻点Iterative Closest Point）
 
-![picture-5](.\pic\picture-5.jpg)
+![picture-5](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-5.jpg)
 
 ##### NDT(正态分布变换Normal Distribution Transformation)
 
-![picture-6](.\pic\picture-6.jpg)
+![picture-6](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-6.jpg)
 
 **注：这里NDT也有用在路径规划中**
 
@@ -152,7 +152,7 @@ b. 面特征
 
 定位流程图如下：
 
-![picture-7](.\pic\picture-7.jpg)
+![picture-7](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-7.jpg)
 
 由于匹配需要较准确的初始位姿，因此在定位之前需要初始化环节，给出载体的初始位姿。 
 
@@ -212,7 +212,7 @@ PointCloud->Range Image 激光雷达点云到深度图像
 
 ## 滤波和优化框架的区别
 
-![picture-8](.\pic\picture-8.jpg)
+![picture-8](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-8.jpg)
 
 图里一共三行，第一行是优化，第二行是基于滑动窗口的优化，第三行是滤波。
 
@@ -232,23 +232,23 @@ Occupancy grid map和Voxel map后，进行障碍物检测
 
 #### 跑官方数据集
 
-![picture-9](.\pic\picture-9.png)
+![picture-9](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-9.png)
 
 #### 跑机电楼下
 
 两个不同数据集的使用，一个数据集生成地图，一个数据集进行定位。
 
-![picture-10](.\pic\picture-10.png)
+![picture-10](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-10.png)
 
 #### 跑二楼平台
 
 两个不同数据集的使用，一个数据集生成地图，一个数据集进行定位。
 
-![picture-11](.\pic\picture-11.png)
+![picture-11](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-11.png)
 
 相同数据集的使用，一个数据集生成地图并进行定位。
 
-![picture-12](.\pic\picture-12.png)
+![picture-12](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-12.png)
 
 ### 基于livox-relocalization的定位
 
@@ -256,17 +256,17 @@ Occupancy grid map和Voxel map后，进行障碍物检测
 
 相同数据集的使用，一个数据集生成地图并进行定位。
 
-![picture-13](.\pic\picture-13.png)
+![picture-13](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-13.png)
 
 两个不同数据集的使用，一个数据集生成地图，一个数据集进行定位。
 
-![picture-14](.\pic\picture-14.png)
+![picture-14](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-14.png)
 
 ### 重构SLAM的框架跑kitti数据集
 
-![picture-15](.\pic\picture-15.png)
+![picture-15](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-15.png)
 
-![picture-16](.\pic\picture-16.png)
+![picture-16](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-16.png)
 
 这个重构的SLAM框架代码是基于现有的SLAM算法重构而成，即可用于建图和又可用于定位，前端用了NDT做里程计，后端采用了scan-to-map和回环、全局约束的优化，这部分可以用于建图，在kitti数据集下生成地球坐标系下的全局地图；由于kitti数据集包含了全局卫星信息，是位置已知而姿态未知的初始化情况，定位用了ICP匹配实现全局定位。
 
@@ -294,13 +294,13 @@ Occupancy grid map和Voxel map后，进行障碍物检测
 
 测试7秒左右开启定位程序，开始还是不飘的，后面在路口前面就提前拐弯了。这里的原因是初始值的问题。
 
-![picture-17](.\pic\picture-17.png)
+![picture-17](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-17.png)
 
 实验五（20220322-6.mp4）：测试重构slam框架中定位功能，数据为kitti数据集。
 
 直接开启bag跑，看下长时间效果，没什么问题。
 
-![picture-18](.\pic\picture-18.jpg)
+![picture-18](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-18.jpg)
 
 实验六（20220322-7.mp4）：测试重构slam框架中定位功能，数据为kitti数据集。
 
@@ -316,7 +316,7 @@ Occupancy grid map和Voxel map后，进行障碍物检测
 
 延时20秒，定位成功
 
-![picture-19](.\pic\picture-19.jpg)
+![picture-19](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-19.jpg)
 
 实验九（20220322-10.mp4）：测试livox雷达官方定位框架，数据集场景为机电楼楼下
 
@@ -326,7 +326,7 @@ Occupancy grid map和Voxel map后，进行障碍物检测
 
 不延时，直接运行，长时间可以定位，拐弯也正常。
 
-![picture-20](.\pic\picture-20.jpg)
+![picture-20](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-20.jpg)
 
 实验十一（20220322-12.mp4）：测试LIO-SAM_based_relocalization定位框架，数据集场景为机电楼楼下
 
@@ -380,7 +380,7 @@ Occupancy grid map和Voxel map后，进行障碍物检测
 
 感知系统方案示意图为：
 
-![picture-21](.\pic\picture-21.jpg)
+![picture-21](https://github.com/goldqiu/Mapping-Localization-Planning-Learning/tree/main/pic/picture-21.jpg)
 
  注：障碍物检测和硬件授时并未完善，同时定位与建图的细化也没体现。
 
